<resources>
    <string name="app_name">sinkTester</string>

    <string name="wireless_projection">无线投屏</string>
    <string name="encrypted_access">加密访问</string>
    <string name="password">密码</string>
    <string name="introduce_content">使用“无线投屏”将您手机上的内容投送到此大屏电视上</string>
    <string name="network_name">网络名称</string>
    <string name="television_name">电视名称</string>


    <string name="please_input_pwd">请输入六位数字密码</string>
    <string name="only_letters_numbers">密码仅支持字母及数字</string>
    <string name="change_password">修改密码</string>
    <string name="input_pwd_on_phone">在手机上输入此密码可发起投屏</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>

    <string name="pin_code">无线投屏连接码</string>
    <string name="device_unavailable">错误：设备名称不可用</string>

    <string name="want_to_connect">想要连接您的电视</string>
    <string name="reject">拒绝</string>
    <string name="allow_this_time">本次允许</string>
    <string name="always_allow">总是允许</string>

    <string name="input_digits">请输入六位数字密码</string>
    <string name="contain_digits">密码仅支持字母及数字</string>
</resources>
