<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/wireless_projection"
        android:textColor="@color/colorTextColor"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/main_switch_layout"
                android:layout_width="420dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layer_list_bg"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/wireless_projection"
                    android:textColor="@color/colorTextColor"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/main_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:switchMinWidth="0dp"
                    android:showText="false"
                    android:textOff=""
                    android:textOn=""
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/encryption_switch_layout"
                android:layout_width="420dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layer_list_bg"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/encrypted_access"
                    android:textColor="@color/colorTextColor"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/encryption_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:showText="false"
                    android:textOff=""
                    android:textOn=""
                    android:switchMinWidth="0dp"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="420dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layer_list_bg"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/password"
                    android:textColor="@color/colorTextColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/password_textview"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="right|center_vertical"
                    android:textColor="@color/colorTextColor"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/arrow_imageview"
                    android:layout_width="12dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="12dp"
                    app:srcCompat="@drawable/public_arrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/right_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:tint="#eeeeee"
                    app:srcCompat="@drawable/ic_wireless_projection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/wireless_projection"
                    android:textColor="@color/colorTextColor"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/introduct_textview"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/introduce_content"
                android:textColor="@color/colorTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/network_name"
                android:textColor="@color/colorTextColor"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/wifi_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:tint="#eeeeee"
                    app:srcCompat="@drawable/ic_wlan" />

                <TextView
                    android:id="@+id/wifi_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#FFFFFF"
                android:text="@string/television_name"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/tv_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>